Revision history for Perl extension Devel::Size.

0.74_51 2011-04-20 nicholas
 * Don't count PL_sv_{undef,no,yes} in the size returned

0.74_50 2011-04-19 nicholas
 * Ensure that size() doesn't add the referent's size for non SVt_RV references

0.74 2011-04-19 nicholas
 * Correct the Makefile.PL - LICENSE was added to ExtUtils::MakeMaker in 6.31

0.73_51 2011-04-17 nicholas
 * Refactor the C code to accumulate the size inside the tracking structure
   - this means that the C *_size() functions now return void
   - The XS functions size() and total_size() now return UV, not IV

0.73_50 2011-04-17 nicholas
 * Avoid using assert() on ithreaded 5.8.8 and earlier, as it needs my_perl
 * Fix the test added in 0.73, as it tripped over a combination of bugs

0.73 2011-04-16 nicholas
 * Revert a bad assertion introduced in 0.72_50, which was logically wrong.
   - and a test to demonstrate one case that would trigger it

0.72_52 2011-04-15 nicholas
 * Add a test for the non-exceptional warnings.

0.72_51 2011-04-15 nicholas
 * Add PERL_NO_GET_CONTEXT to improve performance under multiplicity

0.72_50 2011-04-14 nicholas
 * Exception handling is totally MSVC specific, so only use it there
   - this means that we don't need to use a C++ compiler anywhere
 * Rework bit-vector tracking mechanism to use a 256-way tree. This avoids
   making assumptions about 64-bit platforms' memory layouts, and eliminates
   the fatal error introduced in 0.72 when the assumption was violated.
 * Convert to XSLoader
 * Resolve CPAN #49437 (Devel::Size adds magic in Perl 5.10)
 * Resolve CPAN #58484 and #58485 (related to CVs that are XSUBs)

0.72 2008-10-14 BrowserUk 70 tests
 * Added bit-vector pointer tracking mechanism.
   - new fatal error (64-bit platforms only)
 * Added exception handling
    - 4 new warnings (disabled by default)
 * Updated POD to reflect above
 * Added basic.t test 13 
 * replaced Module::Install with hand crafted EU::MM Makefile.pl
   (With many thanks to Sisyphus)